--- a/LECTURE1.html
+++ b/LECTURE1.html
@@ -552,6 +552,22 @@ means <em>learning by doing</em>! Instructor-led lectures will be kept
 short, and we will spend significant class time (and pretty much all of
 lab time) on our computers, working through problems.</p>
 </div>
+<div id="class-example-harvest-of-horseshoe-crabs-in-delaware-bay"
+class="section level2">
+<h2>Class example: harvest of horseshoe crabs in Delaware Bay</h2>
+<p>Real-world example- we will revisit throughout the class!</p>
+<p><img src="rekn_hsc1.png" style="width:50.0%" /></p>
+<p><em>Why harvest horseshoe crabs?</em> Eel and Whelk (“Conch”)
+fisheries rely on horseshoe crabs as bait.</p>
+<p><em>Why restrict horseshoe crab harvest?</em> Red Knots and other
+shorebirds depend on horseshoe crab eggs as a key source of energy when
+migrating northward in the spring!</p>
+<p><strong>Problem statement</strong>: “Manage harvest of horseshoe
+crabs in the Delaware Bay to maximize harvest but also to maintain
+ecosystem integrity, provide adequate stopover habitat for migrating
+shorebirds, and ensure that the abundance of horseshoe crabs is not
+limiting the red knot stopover population or slowing recovery”</p>
+</div>
 <div id="in-class-exercise-insightmaker" class="section level2">
 <h2>In-class Exercise: InsightMaker</h2>
 <p>A [Stock] of stuff increases over time via what [Flows In]. Imagine
