--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -529,10 +529,8 @@ entire planet in two generations!</p>
 <p>The reason? Populations can exhibit <strong>exponential
 growth</strong>, in which each new addition to the population expands
 the reproductive potential of the population in a <strong>positive
-feedback loop</strong>.</p>
-</div>
-<div id="mathematics-and-population-ecology" class="section level2">
-<h2>Mathematics and Population Ecology</h2>
+feedback loop</strong>.<br />
+## Mathematics and Population Ecology</p>
 <p>‘Mathematics seems to endow one with a new sense’<br />
 - Charles Darwin</p>
 <p>‘Like most mathematicians, he takes the hopeful biologist to the edge
@@ -551,13 +549,9 @@ volumes of Lotka’s studies.<br />
 </div>
 <div id="exponential-growth" class="section level2">
 <h2>Exponential growth</h2>
-<p>In lab we went over the mathematics of exponential growth. Now we
-will go over the concept of exponential growth, focusing on the idea of
-exponential growth as a <strong>positive feedback loop</strong>.</p>
+<p>Exponential growth is the result of a <strong>positive (reinforcing)
+feedback loop</strong>.</p>
 <p><img src="positivefeedback1.png" /></p>
-</div>
-<div id="in-class-exercise-positive-feedbacks" class="section level2">
-<h2>In-class Exercise: positive feedbacks</h2>
 <p><strong>Feedbacks</strong> in systems occur when the input and output
 rates (e.g., births and deaths per year) depend upon the value of the
 stock (e.g., a wild population!).</p>
@@ -573,6 +567,9 @@ We’ll talk more about negative feedbacks in populations soon enough
 <p>In the previous in-class exercise the model structure produced linear
 growth as the [Flow] added a fixed amount to the [Stock] in each time
 step.</p>
+</div>
+<div id="in-class-exercise-positive-feedbacks" class="section level2">
+<h2>In-class Exercise: positive feedbacks</h2>
 <p><strong>Q</strong>: What do the following have in common: snowball,
 people, rabbits, fire, bacteria, fleas, savings accounts, cancer?</p>
 <p>Let’s build a model to help us better understand this process.</p>
@@ -623,7 +620,7 @@ simulation again.</p>
 <span class="math inline">\(\Delta N = r \cdot N_t\)</span>. How does it
 relate to the InsightMaker model you have just created? Which component
 of the equation refers to which component of the model in InsightMaker?
-[TopHat]</p>
+[PointSolutions]</p>
 <ol start="7" style="list-style-type: decimal">
 <li>Think about the first question above while doing this (snowball,
 people, rabbits, fire, bacteria, fleas, savings accounts, cancer). How
@@ -637,12 +634,12 @@ will recognize this as the <em>foundational concept of population
 ecology</em>!</p>
 <p><strong>Q</strong> Can you model the puffball example from earlier in
 the lecture? How many giant puffballs are in the population after two
-generations?? [TopHat]</p>
+generations?? [PointSolutions]</p>
 <p><strong>Q</strong> Can you (approximately) replicate the human
 population graph at the beginning of this lecture? What is the
 per-capita growth rate (<span class="math inline">\(r\)</span>) of the
-human population?? [TopHat] (NOTE: this is totally optional, but you
-could solve this analytically!)</p>
+human population?? [PointSolutions] (NOTE: this is totally optional, but
+you could solve this analytically!)</p>
 <p>And just for fun, here is a <a
 href="https://www.youtube.com/watch?v=9znsuCphHUU&amp;list=PLE431532ABEAD0082">video</a>
 about exponential growth you might want to check out..</p>
