--- a/index.html
+++ b/index.html
@@ -467,7 +467,8 @@ div.tocify {
 <strong>Office hours</strong>: M 4pm in FA 220e<br />
 <strong>Course Website</strong>: <a
 href="https://kevintshoemaker.github.io/NRES-470/">https://kevintshoemaker.github.io/NRES-470/</a></p>
-<p><strong>Teaching Assistant</strong> Sage Ellis<br />
+<p><strong>Teaching Assistant</strong> Sage Ellis
+(sageellis_at_nevada_dot_unr_dot_edu)<br />
 <strong>TA Office hours</strong>: TBD</p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
