--- a/LAB1.html
+++ b/LAB1.html
@@ -1036,7 +1036,7 @@ defined extinction as &lt;1 individual in the population. Propose one
 alternative definition of extinction and justify why your definition
 might make more sense than the definition used in 2g (feel free to use a
 real-world example).</p></li>
-<li><p><strong><em>Text entry (2g.)</em></strong> Please copy and paste
+<li><p><strong><em>Text entry (2i.)</em></strong> Please copy and paste
 the R script you used to answer the above questions.</p></li>
 </ul>
 </div>
@@ -1143,8 +1143,8 @@ answer.</p></li>
 <div id="checklist-for-lab-1-completion" class="section level2">
 <h2>Checklist for Lab 1 completion</h2>
 <ul>
-<li>Please submit all files (Excel file as attachment in Top Hat and R
-script as text pasted into Top Hat) and responses via Top Hat. The
+<li>Please submit all files (Excel file as attachment in WebCampus and R
+script as text pasted into WebCampus) and responses via WebCampus. The
 InsightMaker models should be shared by saving your Insights as “public”
 and sharing the URL link with your instructors in Top Hat.</li>
 </ul>
@@ -1177,7 +1177,8 @@ Time.</li>
 <li><em>Short answer (2e.)</em></li>
 <li><em>Image upload (2f.)</em></li>
 <li><em>Short answer (2g.)</em></li>
-<li><em>Copy and paste R code (2h.)</em> Your R code should show that
+<li><em>Short answer (2h.)</em></li>
+<li><em>Copy and paste R code (2i.)</em> Your R code should show that
 you were able to:
 <ol style="list-style-type: lower-alpha">
 <li>adapt the given code to run for 85 years, and can display a plot of
