--- a/INTRO.html
+++ b/INTRO.html
@@ -458,7 +458,7 @@ div.tocify {
 </div>
 
 
-<p><img src="prairie_dogs2.jpg" /></p>
+<p><img src="prairie_dogs2.jpg" style="width:50.0%" /></p>
 <div id="summary" class="section level2">
 <h2>Summary</h2>
 <p>In this class we will explore key concepts of <em>population
