--- a/LECTURE2.html
+++ b/LECTURE2.html
@@ -486,7 +486,7 @@ debate)</li>
 <li>What factors allow metapopulations to be stable and
 self-sustaining?</li>
 </ul>
-<p><img src="White-tailed_deer.jpg" /></p>
+<p><img src="White-tailed_deer.jpg" style="width:50.0%" /></p>
 </div>
 <div id="conservation-and-management" class="section level3">
 <h3>Conservation and Management</h3>
@@ -521,7 +521,7 @@ id="exponential-growth-the-fundamental-principle-of-population-ecology"
 class="section level2">
 <h2>Exponential growth: the fundamental principle of population
 ecology</h2>
-<p><img src="Puffball1.png" /></p>
+<p><img src="Puffball1.png" style="width:50.0%" /></p>
 <p>Giant puffballs produce 7 trillion offspring (12 zeroes!) in one
 reproductive event … If all of those individuals reached adulthood, the
 descendants from just two parent puffballs would weigh more than the
@@ -529,15 +529,17 @@ entire planet in two generations!</p>
 <p>The reason? Populations can exhibit <strong>exponential
 growth</strong>, in which each new addition to the population expands
 the reproductive potential of the population in a <strong>positive
-feedback loop</strong>.<br />
-## Mathematics and Population Ecology</p>
+feedback loop</strong>.</p>
+</div>
+<div id="mathematics-and-population-ecology" class="section level2">
+<h2>Mathematics and Population Ecology</h2>
 <p>‘Mathematics seems to endow one with a new sense’<br />
 - Charles Darwin</p>
 <p>‘Like most mathematicians, he takes the hopeful biologist to the edge
 of the pond, points out that a good swim will help his work, and then
 pushes him in and leaves him to drown’<br />
 - Charles Elton, in reference to a work by Alfred Lotka</p>
-<p><img src="1976_Elton.jpg" /></p>
+<p><img src="1976_Elton.jpg" style="width:30.0%" /></p>
 <p>The importance of the method is this: if we know certain variables,
 mostly desired by ecologists and in some cases already determined by
 them, we can predict certain results which would not normally be
